# ComfyUI-DareMerge

./: .gitignore  README.md  __init__.py  daremerge.py  magmerge.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
components/: block.py  clip.py  dare.py  dare_element.py  dare_mbw.py  gradients.py  lora.py  mask_model.py  model.py  normalize.py  reports.py
ddare/: const.py  lora.py  mask.py  merge.py  model.py  reporting.py  tensor.py  util.py
examples/: README.md
merge/: block.py  dare.py  dareMBW.py  mag.py  mag_original.py  mergeutil.py
resources/: SD15.md  SDXL.md
