[project]
name = "comfyui-daremerge"
description = "ComfyUI powertools for SD1.5 and SDXL model merging"
version = "0.3.2"
license = { text = "GNU General Public License v3.0" }
authors = [
    { name = "54rt1n", email = "opensource@bmds.us" }
]
dependencies = [
    "pillow",
    "numpy",
    "matplotlib",
    "torch"
]

[project.urls]
Repository = "https://github.com/54rt1n/ComfyUI-DareMerge"

[tool.comfy]
PublisherId = "user"
DisplayName = "ComfyUI-DareMerge"
Icon = "https://raw.githubusercontent.com/54rt1n/ComfyUI-DareMerge/master/resources/blackhole192.png"
